--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*====================================================================================*/
 .container {
-  width: 1200px;
+  width: 95%;
   padding: 0;
   margin: 0 auto;
 }
@@ -28,18 +28,38 @@
   color: #000;
   text-transform: uppercase;
 }
+.big_title span {
+  position: relative;
+  z-index: 10;
+}
+.big_title span:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 200px;
+  height: 120%;
+  background: #70c048;
+  top: 50%;
+  left: -10%;
+  transform: translateY(-50%);
+  z-index: -1;
+  transition: 0.4s;
+}
+.big_title span:hover:after {
+  width: 180px;
+}
 
 .catalog-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
 .content {
   margin: 50px auto 0;
-  max-width: 900px;
+  max-width: 90%;
 }
 
 .catalog-position_ {
@@ -112,7 +132,7 @@
   margin: 0 0 20px;
 }
 .card_item .right_part_text_cont .order_btn {
-  margin: 20px 0 0 0;
+  margin: 20px auto 0;
   max-width: 250px;
   text-align: center;
   cursor: pointer;
@@ -159,29 +179,58 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  margin-bottom: 20px;
+  height: 300px;
 }
 .tabs .__tab {
   box-sizing: border-box;
-  flex: 0 1 30%;
+  flex: 0 1 40%;
   height: 100%;
   text-align: center;
   cursor: pointer;
   padding: 20px 0;
 }
 .tabs .__tab .picture {
-  height: 200px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+.tabs .__tab .picture .pic {
+  height: 80%;
+}
+.tabs .__tab .picture .pic img {
+  height: 100%;
+}
 .tabs .__tab .picture .text {
   font-size: 22px;
+  color: #000;
+}
+.tabs .__tab .picture .text span {
+  position: relative;
+  z-index: 10;
+}
+.tabs .__tab .picture .text span:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 120%;
+  background: #70c048;
+  top: 50%;
+  left: -10%;
+  transform: translateY(-50%);
+  z-index: -1;
+  transition: 0.4s;
+}
+.tabs .__tab:hover .text span:after {
+  width: 60px;
 }
 .tabs .__tab._active {
   border: 4px solid #70c048;
 }
 .tabs .__tab:nth-child(2) {
-  margin: 0 60px;
+  margin: 0 100px;
 }
 
 .footer {
