--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ a {
 
 .first_screen {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
 }
 .first_screen .wrapper {
@@ -117,6 +117,67 @@ a {
 }
 .why_us_block .conteiner .content_box .why_us_item:nth-child(2) {
   margin: 0 30px;
+}
+@media screen and (max-width: 1000px) {
+  .why_us_block .conteiner .content_box .why_us_item:nth-child(2) {
+    margin: 0 auto 20px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .why_us_block .conteiner .content_box .why_us_item {
+    margin: 0 auto 20px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .why_us_block .conteiner .content_box {
+    display: block;
+    text-align: center;
+  }
+}
+
+/*====================================================================================*/
+.lic_cont {
+  margin-bottom: 50px;
+}
+.lic_cont .lic_title {
+  font-size: 2em;
+  color: #000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.lic_cont .conteiner {
+  display: flex;
+  justify-content: space-around;
+}
+.lic_cont .conteiner .lic_item {
+  flex: 0 1 25%;
+  margin: 0 40px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.lic_cont .conteiner .lic_item img {
+  width: 100%;
+}
+@media screen and (max-width: 1200px) {
+  .lic_cont .conteiner .lic_item img {
+    max-width: 80%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .lic_cont .conteiner .lic_item {
+    flex: 0 1 40%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .lic_cont .conteiner {
+    flex-wrap: wrap;
+  }
+}
+
+/*====================================================================================*/
+.map .container {
+  width: 100%;
 }
 
 /*====================================================================================*/
