--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,8 @@ a {
 
 /*====================================================================================*/
 .lic_cont {
-  margin-bottom: 50px;
+  margin: 0 100px 50px;
+  position: relative;
 }
 .lic_cont .lic_title {
   font-size: 2em;
@@ -146,33 +147,43 @@ a {
   text-align: center;
   margin-bottom: 30px;
 }
-.lic_cont .conteiner {
-  display: flex;
-  justify-content: space-around;
-}
 .lic_cont .conteiner .lic_item {
-  flex: 0 1 25%;
-  margin: 0 40px;
+  max-width: 200px;
   text-align: center;
-  margin-bottom: 40px;
 }
 .lic_cont .conteiner .lic_item img {
   width: 100%;
 }
-@media screen and (max-width: 1200px) {
-  .lic_cont .conteiner .lic_item img {
-    max-width: 80%;
-  }
+
+.lic_controls {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  width: 95vw;
+  text-align: center;
 }
-@media screen and (max-width: 1200px) {
-  .lic_cont .conteiner .lic_item {
-    flex: 0 1 40%;
-  }
+
+.prev_arrow, .next_arrow {
+  font-size: 40px;
+  z-index: 100;
+  transition: 0.1s;
+  color: #e5e5e5;
 }
-@media screen and (max-width: 1200px) {
-  .lic_cont .conteiner {
-    flex-wrap: wrap;
-  }
+.prev_arrow a, .next_arrow a {
+  width: 100%;
+  height: 100%;
+  display: block;
+  transform: translateY(-100%);
+  border-radius: 50%;
+  position: relative;
+  z-index: 10;
+}
+
+.prev_arrow {
+  transform: rotate(180deg);
 }
 
 /*====================================================================================*/
