--- a/css/modal.css
+++ b/css/modal.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .main {
@@ -49,9 +51,10 @@ a#login_pop:hover, a#join_pop:hover {
 .overlay:target {
   visibility: visible;
   opacity: 1;
+  z-index: 1000;
 }
 
-.popup {
+.popup, .popup_2 {
   background-color: #fff;
   border: 3px solid #fff;
   display: inline-block;
@@ -67,7 +70,17 @@ a#login_pop:hover, a#join_pop:hover {
   transition: opacity 0.5s, top 0.5s;
 }
 
+.popup_cont_2 {
+  width: 400px;
+}
+
 .overlay:target + .popup {
+  top: 50%;
+  opacity: 1;
+  visibility: visible;
+}
+
+.overlay:target + .popup_2 {
   top: 50%;
   opacity: 1;
   visibility: visible;
@@ -102,40 +115,45 @@ a#login_pop:hover, a#join_pop:hover {
   margin-bottom: 50px;
 }
 .form_cont .upper_form .picture_of_prod {
-  width: 150px;
+  display: block;
+  width: 200px;
   object-fit: contain;
+  height: 100%;
+}
+.form_cont .upper_form .picture_of_prod .left_part_img_cont {
+  height: 100%;
 }
 .form_cont .upper_form .picture_of_prod .catalog-photo-frame {
   text-align: center;
-  padding: 5px;
   box-sizing: border-box;
-  border: 4px solid #70c048;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 .form_cont .upper_form .picture_of_prod .catalog-photo-frame img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  border: 4px solid #70c048;
+  padding: 5px;
 }
 .form_cont .upper_form .desc_of_prod {
-  flex: 1 1 auto;
-  margin-left: 50px;
-  max-width: 300px;
+  margin-left: 30px;
+  width: 300px;
 }
 .form_cont .upper_form .desc_of_prod .item_text .options, .form_cont .upper_form .desc_of_prod .item_text .item_desc_title {
   color: #000;
-  font: bold 20px/16px Cuprum, sans-serif;
+  font: bold 20px/24px Cuprum, sans-serif;
   margin: 1em 0;
   text-transform: uppercase;
 }
 .form_cont .upper_form .desc_of_prod .item_text .item_desc_title {
+  text-align: left;
   margin: 0em 0 0.5em;
 }
 .form_cont .upper_form .desc_of_prod .item_text .item_desc {
   margin: 1em 0 2em;
   padding: 0 5px 0 24px;
-  font-size: 13px;
+  font-size: 16px;
   line-height: 1.1;
 }
 .form_cont .upper_form .desc_of_prod .item_text .item_standart, .form_cont .upper_form .desc_of_prod .item_text .item_comp, .form_cont .upper_form .desc_of_prod .item_text .item_density, .form_cont .upper_form .desc_of_prod .item_text .item_color, .form_cont .upper_form .desc_of_prod .item_text .item_size, .form_cont .upper_form .desc_of_prod .item_text .item_tall, .form_cont .upper_form .desc_of_prod .item_text .aim {
@@ -164,7 +182,10 @@ a#login_pop:hover, a#join_pop:hover {
 .form_cont .lower_form .price_of_prod {
   font-size: 25px;
 }
-.send_button {
+.form_cont .lower_form .price_of_prod .price-value span {
+  color: #70c048;
+}
+.send_button, .send_button_2, .form_btn_2 {
   width: 50%;
   padding: 20px 0;
   color: #fff;
@@ -176,22 +197,65 @@ a#login_pop:hover, a#join_pop:hover {
   cursor: pointer;
 }
 
-.send_button:hover {
+.send_button:hover, .send_button_2:hover, .form_btn_2:hover {
   background: #76EB48;
 }
 
-/*
-input{
-	width: 100%;
-	padding: 15px 15px 15px 25px;
-	box-sizing: border-box;
-	border: none;
-	background: rgba(235,235,235);
-	border-radius:  50px;
-	font-size: 20px;
-	font-family: Cuprum, sans-serif;
-	color: #6e6e6e;
+.send_button_2 {
+  width: 100%;
 }
-input:hover{
 
-}*/
+.form_btn_2 {
+  text-decoration: none;
+  text-align: center;
+}
+.form_btn_2 span {
+  color: #fff;
+}
+
+.form_cont_2 {
+  padding: 30px;
+}
+
+.input_item {
+  margin: 0 0 20px;
+}
+.input_item input {
+  width: 100%;
+  padding: 15px 15px 15px 25px;
+  box-sizing: border-box;
+  border: none;
+  background: #ebebeb;
+  border-radius: 50px;
+  font-size: 20px;
+  font-family: Cuprum, sans-serif;
+  color: #6e6e6e;
+}
+
+a:active, a:focus {
+  outline: none;
+}
+
+input, textarea {
+  outline: none;
+}
+
+input:active, textarea:active {
+  outline: none;
+}
+
+:focus {
+  outline: none;
+}
+
+textarea {
+  resize: none;
+}
+
+textarea {
+  resize: vertical;
+}
+
+textarea {
+  resize: horizontal;
+}
