--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ a {
 
 /*====================================================================================*/
 .lic_cont {
-  margin: 0 100px 50px;
+  margin: 70px 100px 50px;
   position: relative;
 }
 .lic_cont .lic_title {
