--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 * {
   padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   list-style-type: none;
 }
@@ -27,7 +28,11 @@ a {
   background: #70c048;
 }
 .header .header_cont .menu_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   padding: 10px 0;
 }
@@ -52,6 +57,8 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -72,6 +79,7 @@ a {
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
+  -webkit-filter: blur(5px);
   filter: blur(5px);
 }
 .first_screen .scroll_btn {
@@ -79,8 +87,14 @@ a {
   height: 70px;
   content: "";
   font-size: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center;
   cursor: pointer;
@@ -89,6 +103,8 @@ a {
   bottom: 10px;
   background: #70c048;
   border-radius: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   color: #fff;
 }
@@ -105,8 +121,14 @@ a {
   margin-bottom: 30px;
 }
 .why_us_block .conteiner .content_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .why_us_block .conteiner .content_box .why_us_item {
@@ -159,8 +181,14 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 95vw;
   text-align: center;
@@ -169,6 +197,8 @@ a {
 .prev_arrow, .next_arrow {
   font-size: 40px;
   z-index: 100;
+  -webkit-transition: 0.1s;
+  -o-transition: 0.1s;
   transition: 0.1s;
   color: #e5e5e5;
 }
@@ -176,6 +206,8 @@ a {
   width: 100%;
   height: 100%;
   display: block;
+  -webkit-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
   transform: translateY(-100%);
   border-radius: 50%;
   position: relative;
@@ -183,6 +215,8 @@ a {
 }
 
 .prev_arrow {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
@@ -200,6 +234,8 @@ a {
 
 /*====================================================================================*/
 .catalog-position_ {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 30%;
   flex: 0 1 30%;
   text-align: center;
   width: unset;
@@ -226,8 +262,13 @@ a {
 }
 
 .catalog-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
   width: 100%;
   margin: 0 auto;
@@ -248,7 +289,11 @@ a {
   position: relative;
   height: 100%;
   padding: 15px;
+  -webkit-transition: -webkit-transform 0.07s linear;
+  transition: -webkit-transform 0.07s linear;
+  -o-transition: transform 0.07s linear;
   transition: transform 0.07s linear;
+  transition: transform 0.07s linear, -webkit-transform 0.07s linear;
 }
 .card_item .left_part_img_cont {
   max-width: 80%;
@@ -257,15 +302,23 @@ a {
 }
 .card_item .left_part_img_cont .catalog-photo-frame {
   padding: 10px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   border: 4px solid #e8e8e9;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .card_item .left_part_img_cont .catalog-photo-frame .catalog-photo {
+  -o-object-fit: contain;
   object-fit: contain;
   width: 100%;
   height: 100%;
@@ -334,7 +387,11 @@ a {
   padding: 15px;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
 }
 .card_item .form_btn .order_btn {
@@ -354,6 +411,8 @@ a {
 }
 .card_item:hover {
   border: 2px solid #70c048;
+  -webkit-transform: scale(1.01);
+  -ms-transform: scale(1.01);
   transform: scale(1.01);
   position: absolute;
   top: 0;
@@ -361,15 +420,25 @@ a {
 }
 
 .tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin-bottom: 20px;
 }
 .tabs .__tab {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 40%;
   flex: 0 1 40%;
   height: 100%;
   text-align: center;
@@ -378,8 +447,15 @@ a {
 }
 .tabs .__tab .picture {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .tabs .__tab .picture .pic {
